--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,15 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>br.ethamorim.cantina.ifal</groupId>
+        <artifactId>ifal-cantina-remake</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>br.ethamorim.cantina.ifal</groupId>
-    <artifactId>ifal-cantina-remake</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>gui</module>
-        <module>service</module>
-    </modules>
+    <groupId>org.example</groupId>
+    <artifactId>service</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
